This file documents the revision history for Perl extension Gitalist.

0.001003 2010-04-21
    - Added folder / file icons in tree view (Foxtons)
    - Added favicon
    - Fix for non uri_for hard coded links for running at not root locations.
      (RT#56747)

0.001002 2010-04-20
    - Fix link for the project_index action.
    - Add missing images to MANIFEST.

0.001001 2010-04-15
    - Bumping version number to a format I understand, thanks to mst for
      pointing me in the right direction and t0m for the new number.
    - Cleaned up the search results - removed search from the homepage as
      wasn't working (Foxtons).
    - Provide a link for an atom entry. switch mode=xml to type=xhtml (Brian
      Cassidy).

0.000006.1 2010-04-14
    - Documentation fixes for the --repo-dir flag (Dagfinn Ilmari Mannsåker).

0.000006 2010-04-10
    - Major frontend redesign, thanks to ranguard and the web designers at
      Foxtons for making this happen.
    - Major URI overhaul, Gitalist has gone from old gitweb style CGI
      parameters to proper URIs, however the old URIs are still supported
      and will redirect appropriately (Tomas Doran).
    - With the URI overhaul also came breaking up actions into fragments
      for use with Catalyst::View::Component::SubInclude.
    - BIG BREAKING CHANGE - Gitalist::Model::GitRepos has been renamed
      Gitalist::Model::CollectionOfRepos. You need to fix your config and
      if you have actually installed Gitalist - remove the old model file.
    - Bump required version of Git::PurePerl for Encoding fixes.
    - Fix Makefile.PL to not need release deps when checking out of Git.

0.000005 2010-01-09
    - Switch to IPC::Run::start for streamed mode, fixing RT#52658
      and the tests with FreeBSD.
    - Require new FCGI release in the FCGI script for upstream bug fixes.
    - Fix tests with older versions of git.
    - Allow the model to be configured with a list of repositories rather