@@ -111,13 +111,13 @@ if ($Module::Install::AUTHOR) {
 }
 
 if ($ENV{GITALIST_RELEASE_TESTING}) {
-    author_tests 't/author';
-    author_requires 'Test::NoTabs';
-    author_requires 'Test::Pod' => '1.14';
-    author_requires 'Test::Pod::Coverage' => '1.04';
-    author_requires 'Test::WWW::Mechanize::Catalyst' => '0.51';
-    author_requires 'HTML::TreeBuilder::XPath';
-    author_requires 'WWW::Mechanize::TreeBuilder';
+    author_tests('t/author');
+    author_requires('Test::NoTabs');
+    author_requires('Test::Pod' => '1.14');
+    author_requires('Test::Pod::Coverage' => '1.04');
+    author_requires('Test::WWW::Mechanize::Catalyst' => '0.51');
+    author_requires('HTML::TreeBuilder::XPath');
+    author_requires('WWW::Mechanize::TreeBuilder');
 }
 
 install_script glob('script/*.pl');
